writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/redefine_parameter.c
int foo(int a) {
 
    int a = 5;
    return a;
}

int main(void) {
    return foo(3);
}